# latent-action-model

./: .gitignore  probe.py  pyproject.toml  train.py
configs/: lam_medium.yaml  lam_medium_flow.yaml  lam_small.yaml
lam/: dataset.py  flow_utils.py  model.py
lam/modules/: blocks.py  lam.py
reports/: 2026-04-09_lam-flow-probing.md
scripts/: convert_flow_to_npy.py  precompute_flow.py  test_ddp_flow.py  train.sh  verify_flow_warping.py  verify_warping_vs_direct.py  visualize_flow.py
