[project]
name = "latent-action-model"
version = "0.1.0"
description = "Latent Action Model (LAM) for VLA research"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "lightning>=2.2.0",
    "einops>=0.7.0",
    "piq>=0.8.0",
    "opencv-python>=4.8.0",
    "tensorboard>=2.15.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
probe = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
